Avoid too much spacing for li

--- a/_sass/quarkus.scss
+++ b/_sass/quarkus.scss
@@ -118,6 +118,14 @@ p.bluecallout {
   font-weight: 400;
 }
 
+li p {
+  margin: 0 0 0.6rem;
+}
+
+ul li:last-child p:last-child {
+  margin: 0 0 1.5rem;
+}
+
 a {
   line-height: 1.5rem;
   font-weight: 400;
